// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SearchBar
      onCancelButtonPress={[Function]}
      onChangeText={[Function]}
      onSearchButtonPress={[Function]}
      placeholder="Search"
    />
    <list>
      <section>
        <item>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "height": "auto",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingVertical": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 16,
                    "overflow": "hidden",
                    "width": 40,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#C7CDD1",
                        "borderWidth": 0.5,
                        "justifyContent": "center",
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    accessible={false}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "color": "#556572",
                          "fontWeight": "600",
                        },
                        Object {
                          "fontSize": 18,
                        },
                      ]
                    }
                  >
                    E
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontWeight": "600",
                      },
                    ]
                  }
                  testID="AssigneeRow.everyone.name"
                >
                  Everyone
                </Text>
              </View>
            </View>
          </View>
        </item>
      </section>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Course Sections
          </Text>
        </View>
        <item>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "height": "auto",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingVertical": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 16,
                    "overflow": "hidden",
                    "width": 40,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#C7CDD1",
                        "borderWidth": 0.5,
                        "justifyContent": "center",
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    accessible={false}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "color": "#556572",
                          "fontWeight": "600",
                        },
                        Object {
                          "fontSize": 18,
                        },
                      ]
                    }
                  >
                    TS
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontWeight": "600",
                      },
                    ]
                  }
                  testID="AssigneeRow.section-32.name"
                >
                  the section 1
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#556572",
                        "fontSize": 14,
                      },
                    ]
                  }
                >
                  984534 students
                </Text>
              </View>
            </View>
          </View>
        </item>
      </section>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Groups
          </Text>
        </View>
        <item>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "height": "auto",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingVertical": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 16,
                    "overflow": "hidden",
                    "width": 40,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#C7CDD1",
                        "borderWidth": 0.5,
                        "justifyContent": "center",
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    accessible={false}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "color": "#556572",
                          "fontWeight": "600",
                        },
                        Object {
                          "fontSize": 18,
                        },
                      ]
                    }
                  >
                    RS
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontWeight": "600",
                      },
                    ]
                  }
                  testID="AssigneeRow.group-1.name"
                >
                  Red Squadron
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#556572",
                        "fontSize": 14,
                      },
                    ]
                  }
                >
                  23432343 students
                </Text>
              </View>
            </View>
          </View>
        </item>
      </section>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Students
          </Text>
        </View>
        <item>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "height": "auto",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingVertical": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 16,
                    "overflow": "hidden",
                    "width": 40,
                  }
                }
              >
                <View
                  accessibilityLabel=""
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      Object {
                        "backgroundColor": "#F5F5F5",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Image
                    source={
                      Object {
                        "uri": "http://www.fillmurray.com/100/100",
                      }
                    }
                    style={
                      Object {
                        "height": 40,
                        "width": 40,
                      }
                    }
                  />
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontWeight": "600",
                      },
                    ]
                  }
                  testID="AssigneeRow.student-1.name"
                >
                  Donald Trump
                </Text>
              </View>
            </View>
          </View>
        </item>
      </section>
    </list>
  </View>
</RCTSafeAreaView>
`;

exports[`render correctly 2`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SearchBar
      onCancelButtonPress={[Function]}
      onChangeText={[Function]}
      onSearchButtonPress={[Function]}
      placeholder="Search"
    />
    <list>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Course Sections
          </Text>
        </View>
        <item>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "height": "auto",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingVertical": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 16,
                    "overflow": "hidden",
                    "width": 40,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#C7CDD1",
                        "borderWidth": 0.5,
                        "justifyContent": "center",
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    accessible={false}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "color": "#556572",
                          "fontWeight": "600",
                        },
                        Object {
                          "fontSize": 18,
                        },
                      ]
                    }
                  >
                    TS
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontWeight": "600",
                      },
                    ]
                  }
                  testID="AssigneeRow.section-32.name"
                >
                  the section 1
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#556572",
                        "fontSize": 14,
                      },
                    ]
                  }
                >
                  984534 students
                </Text>
              </View>
            </View>
          </View>
        </item>
      </section>
      <section>
        <View
          accessibilityTraits="header"
          style={
            Array [
              Object {
                "backgroundColor": "#F5F5F5",
                "flex": 1,
                "justifyContent": "center",
                "paddingLeft": 16,
                "paddingRight": 8,
                "paddingVertical": 4,
              },
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#2D3B45",
                  "fontFamily": "Lato-Regular",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "color": "#556572",
                    "fontSize": 14,
                    "fontWeight": "600",
                  },
                  undefined,
                ],
              ]
            }
          >
            Groups
          </Text>
        </View>
        <item>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "height": "auto",
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flex": 1,
                  "flexDirection": "row",
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingVertical": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "borderRadius": 20,
                    "height": 40,
                    "marginRight": 16,
                    "overflow": "hidden",
                    "width": 40,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#C7CDD1",
                        "borderWidth": 0.5,
                        "justifyContent": "center",
                        "overflow": "hidden",
                      },
                      Object {
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    accessible={false}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "transparent",
                          "color": "#556572",
                          "fontWeight": "600",
                        },
                        Object {
                          "fontSize": 18,
                        },
                      ]
                    }
                  >
                    RS
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#2D3B45",
                        "fontWeight": "600",
                      },
                    ]
                  }
                  testID="AssigneeRow.group-1.name"
                >
                  Red Squadron
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontFamily": "Lato-Regular",
                        "fontSize": 16,
                      },
                      Object {
                        "color": "#556572",
                        "fontSize": 14,
                      },
                    ]
                  }
                >
                  23432343 students
                </Text>
              </View>
            </View>
          </View>
        </item>
      </section>
    </list>
  </View>
</RCTSafeAreaView>
`;
